--- a/Mobile App Test/Assembly-CSharp.csproj
+++ b/Mobile App Test/Assembly-CSharp.csproj
@@ -36,7 +36,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\UI\UIEnterUsername.cs" />
+     <Compile Include="Assets\Scripts\UI\UICreateLobby.cs" />
      <Compile Include="Assets\Scripts\Netcoding\LobbyCreation.cs" />
      <Compile Include="Assets\CrystalFramework\Utility\SafeArea.cs" />
      <Compile Include="Assets\Scripts\UI\MySafeArea.cs" />
