--- a/Mobile App Test/Assembly-CSharp.csproj
+++ b/Mobile App Test/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
      <Compile Include="Assets\TurnOnCamera.cs" />
      <Compile Include="Assets\Scripts\TestSocketConnection.cs" />
      <Compile Include="Assets\Scripts\Managers\ScenesManager.cs" />
+     <Compile Include="Assets\Scripts\UI\Username.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
