scene manager persistence

--- a/Mobile App Test/Assembly-CSharp.csproj
+++ b/Mobile App Test/Assembly-CSharp.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\UI\UICreateLobby.cs" />
      <Compile Include="Assets\Scripts\Netcoding\LobbyCreation.cs" />
+     <Compile Include="Assets\Scripts\UI\Username.cs" />
      <Compile Include="Assets\CrystalFramework\Utility\SafeArea.cs" />
      <Compile Include="Assets\Scripts\UI\MySafeArea.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
@@ -45,7 +46,7 @@
      <Compile Include="Assets\TurnOnCamera.cs" />
      <Compile Include="Assets\Scripts\TestSocketConnection.cs" />
      <Compile Include="Assets\Scripts\Managers\ScenesManager.cs" />
-     <Compile Include="Assets\Scripts\UI\Username.cs" />
+     <Compile Include="Assets\Scripts\UI\UIStartGame.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
