--- a/Mobile App Test/Assembly-CSharp.csproj
+++ b/Mobile App Test/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
      <Compile Include="Assets\Scripts\TestSocketConnection.cs" />
      <Compile Include="Assets\Scripts\Managers\ScenesManager.cs" />
      <Compile Include="Assets\Scripts\UI\UIStartGame.cs" />
+     <Compile Include="Assets\Scripts\Managers\MainManager.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
