--- a/Mobile App Test/Assembly-CSharp.csproj
+++ b/Mobile App Test/Assembly-CSharp.csproj
@@ -37,23 +37,30 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\UI\UICreateLobby.cs" />
-     <Compile Include="Assets\Scripts\Netcoding\LobbyCreation.cs" />
      <Compile Include="Assets\Scripts\UI\Username.cs" />
+     <Compile Include="Assets\Scripts\UI\UIStartGame.cs" />
+     <Compile Include="Assets\Scripts\Netcoding\LobbyManager.cs" />
+     <Compile Include="Assets\Scripts\UI\LobbyMembers.cs" />
      <Compile Include="Assets\CrystalFramework\Utility\SafeArea.cs" />
      <Compile Include="Assets\Scripts\UI\MySafeArea.cs" />
+     <Compile Include="Assets\Scripts\UI\LobbyMemberDisplay.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
      <Compile Include="Assets\CrystalFramework\Utility\Demos\SafeAreaDemo.cs" />
      <Compile Include="Assets\TurnOnCamera.cs" />
      <Compile Include="Assets\Scripts\TestSocketConnection.cs" />
-     <Compile Include="Assets\Scripts\Managers\ScenesManager.cs" />
-     <Compile Include="Assets\Scripts\UI\UIStartGame.cs" />
      <Compile Include="Assets\Scripts\Managers\MainManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\ScenesManager.cs" />
+     <Compile Include="Assets\Scripts\Controllers\LobbyListEntryController.cs" />
+     <Compile Include="Assets\Scripts\Resources\LobbyListData.cs" />
+     <Compile Include="Assets\Scripts\Controllers\LobbyListController.cs" />
+     <Compile Include="Assets\Scripts\Views\LobbyListView.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+     <None Include="Assets\UI\UXML\LobbyListView.uxml" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
@@ -64,11 +71,13 @@
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
      <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
      <None Include="Assets\CrystalFramework\Utility\Demos\SafeAreaDemo.txt" />
+     <None Include="Assets\UI\UXML\LobbyInfo.uxml" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
      <None Include="Assets\Fonts\OFL.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
      <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+     <None Include="Assets\UI\USS\LobbyInfo.uss" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
     <Reference Include="UnityEngine">
