--- a/Hybrid Experience - Mobile App/Packages/manifest.json
+++ b/Hybrid Experience - Mobile App/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.fluffsugarbutton.mymatchmakingsystem": "file:C:/Users/RealityLab-Guest/Desktop/Hybrid Experience/Code/com.fluffsugarbutton.mymatchmakingsystem",
+    "com.fluffsugarbutton.mymatchmakingsystem": "file:C:/Users/RealityLab-Guest/Desktop/Hybrid Experience/Hybrid Experience/com.fluffsugarbutton.mymatchmakingsystem",
     "com.unity.collab-proxy": "2.0.0",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.rider": "3.0.18",
