--- a/com.fluffsugarbutton.mymatchmakingsystem/package.json
+++ b/com.fluffsugarbutton.mymatchmakingsystem/package.json
@@ -1,13 +1,16 @@
 {
-    "name": "com.fluffsugarbutton.mymatchmakingsystem",
-    "version": "0.0.1",
-    "displayName": "Lobby Example",
-    "unity": "2021.3",
-    "dependencies": {
-      "com.unity.services.lobby": "1.0.3",
-      "com.unity.textmeshpro": "3.0.6"
-    },
-    "author": {
-      "name": "FluffSugarButton"
-    }
+  "name": "com.fluffsugarbutton.mymatchmakingsystem",
+  "version": "0.0.2",
+  "displayName": "Lobby Example",
+  "unity": "2021.3",
+  "dependencies": {
+    "com.unity.services.lobby": "1.0.3",
+    "com.unity.services.relay": "1.0.5",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.netcode.gameobjects": "1.2.0",
+    "com.unity.transport": "1.3.1"
+  },
+  "author": {
+    "name": "FluffSugarButton"
+  }
 }
