--- a/com.fluffsugarbutton.mymatchmakingsystem/Runtime/com.fluffsugarbutton.mymatchmakingsystem.asmdef
+++ b/com.fluffsugarbutton.mymatchmakingsystem/Runtime/com.fluffsugarbutton.mymatchmakingsystem.asmdef
@@ -8,7 +8,9 @@
         "GUID:fe25561d224ed4743af4c60938a59d0b",
         "GUID:03058786646e84a4587858e9302c3f41",
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f"
+        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
+        "GUID:6087a74f6015aae4daed9a2577a7596c",
+        "GUID:4ebbcb26024b547159a86c39de1a8fa5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
