--- a/com.fluffsugarbutton.mymatchmakingsystem/package.json
+++ b/com.fluffsugarbutton.mymatchmakingsystem/package.json
@@ -8,7 +8,9 @@
     "com.unity.services.relay": "1.0.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.netcode.gameobjects": "1.2.0",
-    "com.unity.transport": "1.3.1"
+    "com.unity.transport": "1.3.1",
+    "com.unity.services.vivox": "15.1.210000-pre.1",
+    "com.unity.services.authentication": "3.0.0"
   },
   "author": {
     "name": "FluffSugarButton"
