--- a/Hybrid Experience - Desktop App/Packages/manifest.json
+++ b/Hybrid Experience - Desktop App/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.fluffsugarbutton.mydialogueapp": "file:C:/Users/RealityLab-Guest/Desktop/Hybrid Experience/Hybrid Experience/com.fluffsugarbutton.mydialogueapp",
     "com.fluffsugarbutton.mymatchmakingsystem": "file:C:/Users/RealityLab-Guest/Desktop/Hybrid Experience/Hybrid Experience/com.fluffsugarbutton.mymatchmakingsystem",
     "com.itisnajim.socketiounity": "https://github.com/itisnajim/SocketIOUnity.git",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.cloud.gltfast": "6.0.1",
     "com.unity.collab-proxy": "2.0.7",
